# TokenTrail

./: .env  Cargo.toml  README.md
src/: cli.rs  constants.rs  errors.rs  main.rs  provider.rs  tests.rs  token.rs
src/commands/: fetch.rs  mod.rs  print.rs
